# curiu

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  versioneer.py.license
LICENSES/: LicenseRef-ISC-curiu.txt
src/curiu/: __init__.py  __main__.py  _version.py
src/curiu/ui/: cli.py
